styles/globals.css
@import url(//fonts.googleapis.com/css?family=Vibur);

.neonSign, .neonSign2, .neonSign3, .neonSign4 {
  user-select: none;
  text-align: center;
  height: 6vh;
  background-blend-mode: hard-light;
  background-position-y:top;
  background-position-x: center;
  background-size: 100%;
}
.neonSignon, .neonSign2on, .neonSign3on, .neonSign4on {
  user-select: none;
  text-align: center;
  height: 6vh;
  background-blend-mode: hard-light;
  background-position-y:top;
  background-position-x: center;
  background-size: 100%;
}
.neonSign, .neonSign2, .neonSign3, .neonSign4 {
  font: 400 4vh "Vibur";
  color: #50C9BD;
  text-shadow: 0 -40px 100px, 0 0 0.2px, 0 0 0.01em #50C9BD, 0 0 0.01em #50C9BD, 0 0 0.01em #50C9BD, 0 10px 3px #000;}
.neonSignon, .neonSign2on, .neonSign3on, .neonSign4on {
  font: 400 4vh "Vibur";
  color: #fee;
  text-shadow: 0 -40px 100px, 0 0 0.2px, 0 0 1em #50C9BD, 0 0 0.5em #50C9BD, 0 0 0.1em #50C9BD, 0 10px 3px #000;
}
.neonSign b span, .neonSign2 b span, .neonSign3 b span, .neonSign4 b span{
  display: inline-block;
  font-size: clamp(20px, 4.6vh, 4.6vh);
}
.neonSignon b span, .neonSign2on b span, .neonSign3on b span, .neonSign4on b span{
  display: inline-block;
  font-size: clamp(20px, 4.6vh, 4.6vh);
  animation: blink linear infinite 5s;
}
.neonSign b a, .neonSign2 b a, .neonSign3 b a, .neonSign4 b a {
  display: inline-block;
  font-size: clamp(20px, 4.6vh, 4.6vh);
}
.neonSignon b a, .neonSign2on b a, .neonSign3on b a, .neonSign4on b a {
  display: inline-block;
  font-size: clamp(20px, 4.6vh, 4.6vh);
}
.neonSignon b span:nth-of-type(2) {
  animation: blink reverse infinite 8s;
}
.neonSign2on b span:nth-of-type(2) {
  animation: blink reverse infinite 6s;
}
.neonSign3on b span:nth-of-type(2) {
  animation: blink reverse infinite 4s;
}
.neonSign4on b span:nth-of-type(2) {
  animation: blink reverse infinite 2s;
}
@keyframes blink {
  78% {
    color: inherit;
    text-shadow: inherit;
  }
  79%{
     color: #333;
  }
  80% {

    text-shadow: none;
  }
  81% {
    color: inherit;
    text-shadow: inherit;
  }
  82% {
    color: #333;
    text-shadow: none;
  }
  83% {
    color: inherit;
    text-shadow: inherit;
  }
  92% {
    color: #333;
    text-shadow: none;
  }
  92.5% {
    color: inherit;
    text-shadow: inherit;
  }
}

body, html {  
  height: 100%; 
}
input:focus {
  outline: none;
  box-sizing: none;
}
.shadow:hover {
  box-shadow: 0px 0px 7px white;
}
.dash-subtitle {  
  position: relative;
  color: white;
  z-index: 2;
  top: 118px;
  left: 567px;
  font-size: x-large;
  font-family: "Manuka";
}
.mint-symbol {
  position: relative;  
  top: 53px;
}
.liq-symbol {
  position: relative;  
  top: 32px;
}
.vote-symbol {
  position: relative;  
  top: 53px;
}
.launch-symbol {
  position: relative;  
  top: 25px;
}
.dash-logo {
  position: absolute;
  z-index: 1;
  left: 47.2%;
  top: 1.5vh;
  width: 4.5vw;
  min-width: 65px;
}
@media screen and (max-width:425px) {
  .dash-logo  {
    left: 36.5%;
  }}
.page-frame {  
  position: relative; 
  overflow-y: scroll;
  height: 100vh;
}
.pageTitle {  
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  filter: brightness(80%);
  top: 0%;
  z-index: 0;
  width: 100vw;
  position: relative;
  mask-image: linear-gradient(to bottom, black 0%, transparent 100%);
}
input {
  background-color:#454444;
}
.spacing{
  margin-top: 5vh;
}
.shiftRight{ 
  margin-left: 10%;
  margin-bottom: 10%;
}
.fullHeight{
  min-height: 100vh;
  max-width: 100vw;
  background-color: #212121;
  font-family: 'Abel', sans-serif;
  display: flex;
  position: relative;
  overflow: hidden;
}
h5{
  color:#ffffff;
  text-transform: uppercase;
}
p{
  color: white;
}
.card {
  width: auto;
  margin-bottom: 9%;
  opacity: .8;
}
.card-body a{
  text-decoration: underline;
  color: white
}
.card-body{    
  display: flex;
  justify-items: center;
  flex-direction: column;
  align-items: center;
}
.card-design {  
  background-color: #383838;
  border-radius: 1rem;  
  height: 340px;
  width: 16.2vw;
  min-width: 180px;
}
.walletsection {  
  position: fixed;
  right: 1vw;
  min-width: 120px;
  top: 2vh;
  z-index: 2;
}
.nav-walletsection { 
  width: 5vw;
  margin-top: 5vh;
  margin-left: 0.3vw;
}
.cards {
  position: absolute;
  width: 89vw;
  top: 32vh;
  left: 2.5%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 4%;
  z-index: 1;
}
@media screen and (max-width:425px) {
  .cards {
    left: -7%;
    top: 20vh;
  }}
.card-text{
  color: white;
  font-size: 12px;
  opacity: .8;
  top: 27px;
  position: relative;
}
.mgTop{
  margin-top: 5%;
  margin-bottom: 2%;
}
.stats{
  background-color: #2F2F2F;
}
.gradient{
  background-image: linear-gradient(#50C9BD, #7990FE);
}
ul{
  list-style-type: none;
}
.upper{
  text-transform: uppercase;
}
.nav-home-logo {
  margin-bottom: 11vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  gap: var(--gap-xs);
  font-size: var(--font-size-xl);
}
.nav-label {
  color: white;
  position: relative;
  top: -2vh;
}
.sticky {
  height: 100vh;
  position: relative;
  bottom: 0%;
  z-index: 2;
  width: 13vw;
  max-width: 80px;
  min-width: 73px;
  filter: brightness(70%);
}
.hoverColor:hover {
  background-color: #798EFF;
}
.buttons {
  background-color: #798EFF;  
  position: absolute;
  top: 280px;
  width: 80%;
}
.buttons:hover{
  box-shadow: inset 0px 0px 50px #50C9BD;
}
.walletconnect{
  overflow-x: hidden;
}
.wallet-btn{
  position: relative;
}
/*Liquidation Pool Specific*/
.pool-titles {
  position: relative;
  margin-left: 5%;
  font-size: 24px;
  margin-top: 5%;
  color: white;
}
h3[data-descr] {
  position: relative;
  cursor: help;
}
/* ... */

